# libpyzy

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  ibus-pinyin.spec.in  libpyzy.spec.in
data/: Makefile.am
debian/: control
m4/: Makefile.am
scripts/: header  pydict.py  pyutil.py
src/: .gitignore  Makefile.am  Makefile.am.test  PyZyBopomofo.h  PyZyBopomofoContext.cc  PyZyBopomofoContext.h  PyZyBopomofoKeyboard.h  PyZyConfig.cc  PyZyConfig.h  PyZyDatabase.cc  PyZyDatabase.h  PyZyDoublePinyinContext.cc  PyZyDoublePinyinContext.h  PyZyDoublePinyinTable.h  PyZyDynamicSpecialPhrase.cc  PyZyDynamicSpecialPhrase.h  PyZyFullPinyinContext.cc  PyZyFullPinyinContext.h  PyZyInputContext.cc  PyZyInputContext.h  PyZyPhoneticContext.cc  PyZyPhoneticContext.h  PyZyPhrase.h  PyZyPhraseArray.h  PyZyPhraseEditor.cc  PyZyPhraseEditor.h  PyZyPinyinArray.h  PyZyPinyinContext.cc  PyZyPinyinContext.h  PyZyPinyinParser.cc  PyZyPinyinParser.h  PyZyPinyinParserTable.h  PyZySimpTradConverter.cc  PyZySimpTradConverter.h  PyZySimpTradConverterTable.h  PyZySpecialPhrase.cc  PyZySpecialPhrase.h  PyZySpecialPhraseTable.cc  PyZySpecialPhraseTable.h  PyZyString.h  (+3 more)
